crates/ruff_linter/src/rules/pycodestyle/snapshots/ruff_linter__rules__pycodestyle__tests__missing-whitespace-after-keyword_E27.py.snap
---
source: crates/ruff_linter/src/rules/pycodestyle/mod.rs
---
E275 [*] Missing whitespace after keyword
  --> E27.py:42:8
   |
40 | from w import  (e, f)
41 | #: E275
42 | from w import(e, f)
   |        ^^^^^^
43 | #: E275
44 | from importable.module import(e, f)
   |
help: Added missing whitespace after keyword
   |
41 | #: E275
   - from w import(e, f)
42 + from w import (e, f)
43 | #: E275
   |

E275 [*] Missing whitespace after keyword
  --> E27.py:44:24
   |
42 | from w import(e, f)
43 | #: E275
44 | from importable.module import(e, f)
   |                        ^^^^^^
45 | #: E275
46 | try:
   |
help: Added missing whitespace after keyword
   |
43 | #: E275
   - from importable.module import(e, f)
44 + from importable.module import (e, f)
45 | #: E275
   |

E275 [*] Missing whitespace after keyword
  --> E27.py:47:28
   |
45 | #: E275
46 | try:
47 |     from importable.module import(e, f)
   |                            ^^^^^^
48 | except ImportError:
49 |     pass
   |
help: Added missing whitespace after keyword
   |
46 | try:
   -     from importable.module import(e, f)
47 +     from importable.module import (e, f)
48 | except ImportError:
   |

E275 [*] Missing whitespace after keyword
  --> E27.py:51:1
   |
49 |     pass
50 | #: E275
51 | if(foo):
   | ^^
52 |     pass
53 | else:
   |
help: Added missing whitespace after keyword
   |
50 | #: E275
   - if(foo):
51 + if (foo):
52 |     pass
   |

E275 [*] Missing whitespace after keyword
  --> E27.py:59:5
   |
57 | #: E275:2:11
58 | if True:
59 |     assert(1)
   |     ^^^^^^
60 | #: Okay
61 | def f():
   |
help: Added missing whitespace after keyword
   |
58 | if True:
   -     assert(1)
59 +     assert (1)
60 | #: Okay
   |

E275 [*] Missing whitespace after keyword
  --> E27.py:81:1
   |
80 | #: E275
81 | match(foo):
   | ^^^^^
82 |     case(1):
83 |         pass
   |
help: Added missing whitespace after keyword
   |
80 | #: E275
   - match(foo):
81 + match (foo):
82 |     case(1):
   |

E275 [*] Missing whitespace after keyword
  --> E27.py:82:5
   |
80 | #: E275
81 | match(foo):
82 |     case(1):
   |     ^^^^
83 |         pass
   |
help: Added missing whitespace after keyword
   |
81 | match(foo):
   -     case(1):
82 +     case (1):
83 |         pass
   |
